--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8568,58 +8568,66 @@ button.close {
   }
 }
 /* line 11, ../sass/styles.scss */
+.navbar-brand img {
+  padding-top: 0;
+  padding-bottom: 0;
+  width: 105px;
+  height: 52px;
+}
+
+/* line 19, ../sass/styles.scss */
 .row-no-padding {
   margin: 0 !important;
   padding: 0 !important;
 }
-/* line 15, ../sass/styles.scss */
+/* line 23, ../sass/styles.scss */
 .row-no-padding [class*="col-"] {
   padding: 0 !important;
 }
 
-/* line 21, ../sass/styles.scss */
+/* line 29, ../sass/styles.scss */
 .doc {
   background-color: #662D8C;
   height: 325px;
   margin: 5px;
 }
 
-/* line 28, ../sass/styles.scss */
+/* line 36, ../sass/styles.scss */
 .sob {
   background-color: #C2AD94;
   height: 292px;
   margin: 5px;
 }
 
-/* line 34, ../sass/styles.scss */
+/* line 42, ../sass/styles.scss */
 .bd {
   background-color: #29A6DD;
   height: 215px;
   margin: 5px;
 }
 
-/* line 40, ../sass/styles.scss */
+/* line 48, ../sass/styles.scss */
 .uve {
   background-color: #E81C24;
   height: 215px;
   margin: 5px;
 }
 
-/* line 46, ../sass/styles.scss */
+/* line 54, ../sass/styles.scss */
 .news {
   background-color: #00A498;
   height: 162px;
   margin: 5px;
 }
 
-/* line 52, ../sass/styles.scss */
+/* line 60, ../sass/styles.scss */
 .ph {
   background-color: cornflowerblue;
   height: 120px;
   margin: 5px;
 }
 
-/* line 58, ../sass/styles.scss */
+/* line 66, ../sass/styles.scss */
 .otsu {
   background-color: #EC5A24;
   height: 100px;
