--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -30,6 +30,14 @@
   background-color: #662D8C;
   height: 325px;
   margin: 5px;
+  h2 {
+    color: #ffffff;
+    font: 400 36px 'Lato';
+  }
+  p {
+    color: #ffffff;
+    font: 400 14px 'Lato';
+  }
 
 }
 
@@ -37,6 +45,15 @@
   background-color: #C2AD94;
   height: 292px;
   margin: 5px;
+  h3 {
+    color: #4d4d4d;
+    font: 400 18px 'Lato';
+  }
+  button {
+    color: #4d4d4d;
+    font: 400 12px 'Lato';
+    border: none;
+  }
 }
 
 .bd {
