Fixed font awesome

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,7 +8,7 @@
 @import "bootstrap";
 
 // Import Font Awesome
-@import "../fonts/font-awesome/font-awesome";
+@import "font-awesome/font-awesome";
 
 .navbar-top {
   .navbar-brand {
