--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,6 +11,17 @@
 @import "font-awesome/font-awesome";
 
 .navbar-top {
+
+  @mixin topbar-divider {
+    border-right: 1px solid #06949B;
+  }
+
+  @mixin topbar-links {
+    color: #ffffff;
+    font: 400 12px 'Lato', 400 12px 'Arial';
+    @include topbar-divider;
+  }
+
   .navbar-brand {
     img, p {
       display: inline-block;
@@ -21,18 +32,25 @@
       color: #ffffff;
       font: 400 14px 'Arial';
       text-transform: uppercase;
-      border-right: 1px solid #06949B;
       padding-right: 25px;
+      @include topbar-divider;
     }
     a {
-      color: #ffffff;
-      font: 400 12px 'Lato';
-      border-right: 1px solid #06949B;
+      @include topbar-links;
     }
   }
 
-  .navbar-nav {
+  .navbar-left {
+    .navbar-icon, .navbar-icon:hover {
+      color: #ffffff;
+    }
+  }
 
+  .navbar-right {
+    .topbar-text, .topbar-text:hover {
+      color: #ffffff;
+      @include topbar-links;
+    }
   }
 }
 
