Right block colors set up

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -133,7 +133,7 @@ $main_font_color: #ffffff;
 
 #events {
 
-  $background_color: #C2AD94;
+  $background_color: #C8B7A3;
 
   margin: 5px;
   margin-left: 0;
@@ -193,13 +193,13 @@ $main_font_color: #ffffff;
 
 
 .bd {
-  background-color: #29A6DD;
+  background-color: #4eb2de;
   height: 215px;
   margin: 5px;
 }
 
 .uve {
-  background-color: #E81C24;
+  background-color: #e7434a;
   height: 215px;
   margin: 5px;
   padding-left: 30px;
@@ -229,7 +229,7 @@ $main_font_color: #ffffff;
 }
 
 .news {
-  background-color: #00A498;
+  background-color: #2db0a7;
   height: 162px;
   margin: 5px;
   padding-left: 30px;
@@ -268,7 +268,7 @@ $main_font_color: #ffffff;
 }
 
 .otsu {
-  background-color: #EC5A24;
+  background-color: #ea754a;
   min-height: 100px;
   margin: 5px;
   padding-left: 30px;
