--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -333,3 +333,50 @@ $main_font_color: #ffffff;
     margin-right: 30px;
   }
 }
+
+.caret-left {
+  position: relative;
+}
+
+.caret-left:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-right: 25px solid #666666;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+}
+
+.caret-left:after {
+  content: '';
+  position: absolute;
+  left: 1px;
+  top: 1px;
+  border-right: 24px solid #eeeeee;
+  border-top: 24px solid transparent;
+  border-bottom: 24px solid transparent;
+}
+.caret-right {
+  position: relative;
+}
+
+.caret-right:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-left: 25px solid #666666;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+}
+
+.caret-right:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 1px;
+  border-left: 24px solid #eeeeee;
+  border-top: 24px solid transparent;
+  border-bottom: 24px solid transparent;
+}
