--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -267,6 +267,14 @@ $main_font_color: #ffffff;
       text-decoration: none;
       color: #ededed;
     }
+   tr:first-child {
+      td {
+        border-top: none;
+      }
+    }
+  }
+  td {
+    border-top: 1px solid #ffffff;
   }
   .show-all {
     color: rgba(255, 255, 255, 0.5);
@@ -280,6 +288,7 @@ $main_font_color: #ffffff;
   min-height: 162px;
   margin: 5px;
   padding-left: 30px;
+
   h3 {
     color: #ffffff;
     font: 400 18px Lato;
@@ -293,6 +302,7 @@ $main_font_color: #ffffff;
     font: 300 14px Lato;
   }
   .more {
+    border-bottom: 1px solid #ededed;
     a {
       color: #ededed;
       font: 500 12px Lato;
@@ -346,6 +356,9 @@ $main_font_color: #ffffff;
   }
 }
 
+.carousel {
+  border-top: 1px solid #c7c7c7;
+}
 .caret-left {
   position: relative;
 }
