--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -11577,20 +11577,21 @@ button.close {
 }
 /* line 97, ../sass/styles.scss */
 #workflow .heading {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #ededed;
 }
 /* line 100, ../sass/styles.scss */
 #workflow .heading h2 {
   color: #ffffff;
   font: 36px 'LatoLight', sans-serif;
+  padding-bottom: 30px;
 }
-/* line 105, ../sass/styles.scss */
+/* line 106, ../sass/styles.scss */
 #workflow .heading p {
   margin-top: 20px;
   color: #ffffff;
   font: 14px 'LatoLight', sans-serif;
 }
-/* line 111, ../sass/styles.scss */
+/* line 112, ../sass/styles.scss */
 #workflow .heading .count-documents {
   background: #fff;
   color: #000000;
@@ -11601,14 +11602,14 @@ button.close {
   text-align: center;
   font: 18px 'Lato', sans-serif;
 }
-/* line 118, ../sass/styles.scss */
+/* line 119, ../sass/styles.scss */
 #workflow ul {
   margin-top: 40px;
   list-style-type: none;
   line-height: 3em;
-  border-right: 1px solid #ffffff;
+  border-left: 1px solid #ededed;
 }
-/* line 124, ../sass/styles.scss */
+/* line 125, ../sass/styles.scss */
 #workflow ul .count-documents-o {
   color: #ffffff;
   background: #9574ac;
@@ -11620,186 +11621,191 @@ button.close {
   text-align: center;
   font: 18px 'Lato', sans-serif;
 }
+/* line 133, ../sass/styles.scss */
+#workflow .first_column {
+  border-left: none;
+}
 
-/* line 134, ../sass/styles.scss */
+/* line 138, ../sass/styles.scss */
 #events {
   margin: 5px;
   margin-left: 0;
   padding-left: 25px;
   background-color: #C8B7A3;
 }
-/* line 143, ../sass/styles.scss */
+/* line 147, ../sass/styles.scss */
 #events h3 {
   color: #4d4d4d;
   font: 18px 'Lato', sans-serif;
   margin-left: 40px;
 }
-/* line 149, ../sass/styles.scss */
+/* line 153, ../sass/styles.scss */
 #events ul.toggle-date-range {
   padding-top: 20px;
 }
-/* line 152, ../sass/styles.scss */
+/* line 156, ../sass/styles.scss */
 #events ul.toggle-date-range li {
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
 }
-/* line 158, ../sass/styles.scss */
+/* line 162, ../sass/styles.scss */
 #events ul.toggle-date-range li.active {
   background-color: #e3dbd1;
   border-bottom: 2px solid #C1976D;
 }
-/* line 163, ../sass/styles.scss */
+/* line 167, ../sass/styles.scss */
 #events ul.toggle-date-range a {
   color: #4d4d4d;
   font: 12px 'Lato', sans-serif;
   text-decoration: none;
 }
-/* line 171, ../sass/styles.scss */
+/* line 175, ../sass/styles.scss */
 #events table {
   margin-left: 40px;
   border-spacing: 10px;
   width: 80%;
   font: 14px 'LatoLight', sans-serif;
+  margin-bottom: 50px;
 }
-/* line 177, ../sass/styles.scss */
+/* line 182, ../sass/styles.scss */
 #events table tr:first-child {
   font: 14px 'LatoBold', sans-serif;
 }
-/* line 180, ../sass/styles.scss */
+/* line 185, ../sass/styles.scss */
 #events table tr:first-child td {
   border-top: none;
 }
-/* line 185, ../sass/styles.scss */
+/* line 190, ../sass/styles.scss */
 #events table td {
   border-top: 1px solid #808080;
   padding: 10px;
 }
-/* line 190, ../sass/styles.scss */
+/* line 195, ../sass/styles.scss */
 #events table a {
   text-decoration: none;
   color: #000000;
 }
-/* line 196, ../sass/styles.scss */
+/* line 201, ../sass/styles.scss */
 #events .show-all {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato, sans-serif;
   margin-right: 35px;
 }
 
-/* line 204, ../sass/styles.scss */
-#birthdays {
-  background-color: #4eb2de;
-  height: 215px;
-  margin: 5px;
-}
 /* line 209, ../sass/styles.scss */
+#birthdays {
+  min-height: 215px;
+  margin: 5px;
+  background-color: #4eb2de;
+}
+/* line 217, ../sass/styles.scss */
 #birthdays h3 {
   padding-left: 25px;
   color: #ffffff;
   font: 18px 'Lato', sans-serif;
 }
-/* line 216, ../sass/styles.scss */
+/* line 224, ../sass/styles.scss */
 #birthdays .owl-carousel img {
   height: 100px;
 }
-/* line 221, ../sass/styles.scss */
+/* line 229, ../sass/styles.scss */
 #birthdays .caption-name {
   color: #4d4d4d;
   font: 12px 'Lato', sans-serif;
   line-height: 1px;
   margin-top: 10px;
 }
-/* line 228, ../sass/styles.scss */
+/* line 236, ../sass/styles.scss */
 #birthdays .caption-position {
   color: #4d4d4d;
-  font: 12px 'LatoLight';
+  font: 12px 'LatoLight', sans-serif;
   font-style: italic;
 }
 
-/* line 236, ../sass/styles.scss */
+/* line 244, ../sass/styles.scss */
 #notifications {
-  background-color: #e7434a;
-  height: 215px;
+  min-height: 215px;
   margin: 5px;
   padding-left: 30px;
+  background-color: #e7434a;
 }
-/* line 241, ../sass/styles.scss */
+/* line 253, ../sass/styles.scss */
 #notifications h3 {
   color: #ffffff;
   font: 400 18px Lato;
 }
-/* line 245, ../sass/styles.scss */
+/* line 257, ../sass/styles.scss */
 #notifications p {
   color: rgba(255, 255, 255, 0.5);
   font: 400 14px Lato;
 }
-/* line 249, ../sass/styles.scss */
+/* line 261, ../sass/styles.scss */
 #notifications table {
   border-spacing: 10px;
   border-collapse: separate;
   color: #ededed;
   font: 300 12px Lato;
 }
-/* line 254, ../sass/styles.scss */
+/* line 266, ../sass/styles.scss */
 #notifications table a {
   text-decoration: none;
   color: #ededed;
 }
-/* line 259, ../sass/styles.scss */
+/* line 271, ../sass/styles.scss */
 #notifications .show-all {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato;
   margin-right: 30px;
 }
 
-/* line 266, ../sass/styles.scss */
+/* line 278, ../sass/styles.scss */
 #news {
   background-color: #2db0a7;
-  height: 162px;
+  min-height: 162px;
   margin: 5px;
   padding-left: 30px;
 }
-/* line 271, ../sass/styles.scss */
+/* line 283, ../sass/styles.scss */
 #news h3 {
   color: #ffffff;
   font: 400 18px Lato;
 }
-/* line 275, ../sass/styles.scss */
+/* line 287, ../sass/styles.scss */
 #news p:first-child {
   color: rgba(237, 237, 237, 0.7);
   font: 500 10px Lato;
 }
-/* line 279, ../sass/styles.scss */
+/* line 291, ../sass/styles.scss */
 #news p {
   color: #ffffff;
   font: 300 14px Lato;
 }
-/* line 284, ../sass/styles.scss */
+/* line 296, ../sass/styles.scss */
 #news .more a {
   color: #ededed;
   font: 500 12px Lato;
   margin-right: 30px;
 }
-/* line 291, ../sass/styles.scss */
+/* line 303, ../sass/styles.scss */
 #news .all-news a {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato;
   margin-right: 30px;
 }
 
-/* line 299, ../sass/styles.scss */
+/* line 311, ../sass/styles.scss */
 .ph {
   max-height: 120px;
   margin: 5px;
 }
-/* line 302, ../sass/styles.scss */
+/* line 314, ../sass/styles.scss */
 .ph img {
   height: 120px;
   width: 130px;
   position: relative;
 }
-/* line 307, ../sass/styles.scss */
+/* line 319, ../sass/styles.scss */
 .ph p {
   position: absolute;
   bottom: 0;
@@ -11808,24 +11814,24 @@ button.close {
   margin-left: 10px;
 }
 
-/* line 317, ../sass/styles.scss */
+/* line 329, ../sass/styles.scss */
 .otsu {
   background-color: #ea754a;
   min-height: 100px;
   margin: 5px;
   padding-left: 30px;
 }
-/* line 322, ../sass/styles.scss */
+/* line 334, ../sass/styles.scss */
 .otsu h3 {
   color: #ffffff;
   font: 400 18px Lato;
 }
-/* line 326, ../sass/styles.scss */
+/* line 338, ../sass/styles.scss */
 .otsu p {
   color: #ededed;
   font: 700 12px Lato;
 }
-/* line 330, ../sass/styles.scss */
+/* line 342, ../sass/styles.scss */
 .otsu a {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato;
