--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6662,7 +6662,7 @@ a.thumbnail.active {
 .progress-bar-striped {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
   background-size: 40px 40px;
 }
 
@@ -6682,7 +6682,7 @@ a.thumbnail.active {
 .progress-striped .progress-bar-success {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
 }
 
 /* line 77, ../../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/bootstrap/_progress-bars.scss */
@@ -6693,7 +6693,7 @@ a.thumbnail.active {
 .progress-striped .progress-bar-info {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
 }
 
 /* line 81, ../../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/bootstrap/_progress-bars.scss */
@@ -6704,7 +6704,7 @@ a.thumbnail.active {
 .progress-striped .progress-bar-warning {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
 }
 
 /* line 85, ../../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/bootstrap/_progress-bars.scss */
@@ -6715,7 +6715,7 @@ a.thumbnail.active {
 .progress-striped .progress-bar-danger {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
 }
 
 /* line 1, ../../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/bootstrap-sass-3.3.4.1/assets/stylesheets/bootstrap/_media.scss */
@@ -11520,11 +11520,77 @@ button.close {
   font-weight: normal;
   text-rendering: optimizeLegibility;
 }
-/* line 31, ../sass/styles.scss */
+/* line 1, ../sass/_sidebar.scss */
+nav.sidebar-menu-collapsed {
+  width: 40px;
+}
+
+/* line 4, ../sass/_sidebar.scss */
+nav.sidebar-menu-expanded {
+  width: 195px;
+}
+
+/* line 7, ../sass/_sidebar.scss */
+nav.sidebar {
+  z-index: 1000;
+  position: absolute;
+  margin-top: -5px;
+  left: 0px;
+  height: 100%;
+  background-color: #06949b;
+  color: white;
+  padding: 10px 15px;
+}
+
+/* line 17, ../sass/_sidebar.scss */
+nav.sidebar ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* line 21, ../sass/_sidebar.scss */
+nav.sidebar ul li {
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
+  list-style-type: none;
+}
+
+/* line 27, ../sass/_sidebar.scss */
+nav.sidebar ul li a.expandable {
+  outline: 0;
+  color: white;
+  text-decoration: none;
+}
+
+/* line 32, ../sass/_sidebar.scss */
+nav.sidebar ul li a.expandable:hover {
+  color: #bbbbbb;
+}
+
+/* line 35, ../sass/_sidebar.scss */
+nav.sidebar ul li a.expandable span.expanded-element {
+  margin-left: 2px;
+  display: none;
+  position: relative;
+  bottom: 2px;
+}
+
+/* line 41, ../sass/_sidebar.scss */
+nav.sidebar ul li.active a.expandable {
+  color: white !important;
+}
+
+/* line 23, ../sass/styles.scss */
+.content {
+  margin-left: 35px;
+}
+
+/* line 39, ../sass/styles.scss */
 .navbar-top .navbar-brand img, .navbar-top .navbar-brand p {
   display: inline-block;
 }
-/* line 35, ../sass/styles.scss */
+/* line 43, ../sass/styles.scss */
 .navbar-top .navbar-brand .brand {
   margin-left: 20px;
   color: #ffffff;
@@ -11533,35 +11599,44 @@ button.close {
   padding-right: 25px;
   border-right: 1px solid #06949B;
 }
-/* line 43, ../sass/styles.scss */
+/* line 51, ../sass/styles.scss */
 .navbar-top .navbar-brand a {
   color: #ffffff;
   font: 12px 'LatoLight', sans-serif;
   border-right: 1px solid #06949B;
 }
-/* line 49, ../sass/styles.scss */
+/* line 58, ../sass/styles.scss */
 .navbar-top .navbar-left .navbar-icon, .navbar-top .navbar-left .navbar-icon:hover {
   color: #ffffff;
 }
-/* line 55, ../sass/styles.scss */
+/* line 64, ../sass/styles.scss */
 .navbar-top .navbar-right .topbar-text, .navbar-top .navbar-right .topbar-text:hover {
   color: #ffffff;
   color: #ffffff;
   font: 12px 'LatoLight', sans-serif;
+}
+/* line 68, ../sass/styles.scss */
+.navbar-top .navbar-right .dropdown-menu {
+  color: #4d4d4d;
+  font: 12px / 24px 'Lato', sans-serif;
+  border-top: 2px solid #06949b;
+}
+/* line 74, ../sass/styles.scss */
+.navbar-top .navbar-right .divider {
   border-right: 1px solid #06949B;
 }
 
-/* line 62, ../sass/styles.scss */
+/* line 80, ../sass/styles.scss */
 .row-no-padding {
   margin: 0 !important;
   padding: 0 !important;
 }
-/* line 66, ../sass/styles.scss */
+/* line 84, ../sass/styles.scss */
 .row-no-padding [class*="col-"] {
   padding: 0 !important;
 }
 
-/* line 72, ../sass/styles.scss */
+/* line 90, ../sass/styles.scss */
 #workflow {
   background-color: #9574ac;
   margin: 5px;
@@ -11569,29 +11644,29 @@ button.close {
   padding-left: 25px;
   padding-bottom: 50px;
 }
-/* line 91, ../sass/styles.scss */
+/* line 109, ../sass/styles.scss */
 #workflow a {
   text-decoration: none;
   font: 14px 'LatoLight', sans-serif;
   color: #ffffff;
 }
-/* line 97, ../sass/styles.scss */
+/* line 115, ../sass/styles.scss */
 #workflow .heading {
   border-bottom: 1px solid #ededed;
 }
-/* line 100, ../sass/styles.scss */
+/* line 118, ../sass/styles.scss */
 #workflow .heading h2 {
   color: #ffffff;
   font: 36px 'LatoLight', sans-serif;
   padding-bottom: 30px;
 }
-/* line 106, ../sass/styles.scss */
+/* line 124, ../sass/styles.scss */
 #workflow .heading p {
   margin-top: 20px;
   color: #ffffff;
   font: 14px 'LatoLight', sans-serif;
 }
-/* line 112, ../sass/styles.scss */
+/* line 130, ../sass/styles.scss */
 #workflow .heading .count-documents {
   background: #fff;
   color: #000000;
@@ -11602,14 +11677,14 @@ button.close {
   text-align: center;
   font: 18px 'Lato', sans-serif;
 }
-/* line 119, ../sass/styles.scss */
+/* line 137, ../sass/styles.scss */
 #workflow ul {
   margin-top: 40px;
   list-style-type: none;
   line-height: 3em;
   border-left: 1px solid #ededed;
 }
-/* line 125, ../sass/styles.scss */
+/* line 143, ../sass/styles.scss */
 #workflow ul .count-documents-o {
   color: #ffffff;
   background: #9574ac;
@@ -11621,46 +11696,46 @@ button.close {
   text-align: center;
   font: 18px 'Lato', sans-serif;
 }
-/* line 133, ../sass/styles.scss */
+/* line 151, ../sass/styles.scss */
 #workflow .first_column {
   border-left: none;
 }
 
-/* line 138, ../sass/styles.scss */
+/* line 156, ../sass/styles.scss */
 #events {
   margin: 5px;
   margin-left: 0;
   padding-left: 25px;
   background-color: #C8B7A3;
 }
-/* line 147, ../sass/styles.scss */
+/* line 165, ../sass/styles.scss */
 #events h3 {
   color: #4d4d4d;
   font: 18px 'Lato', sans-serif;
   margin-left: 40px;
 }
-/* line 153, ../sass/styles.scss */
+/* line 171, ../sass/styles.scss */
 #events ul.toggle-date-range {
   padding-top: 20px;
 }
-/* line 156, ../sass/styles.scss */
+/* line 174, ../sass/styles.scss */
 #events ul.toggle-date-range li {
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
 }
-/* line 162, ../sass/styles.scss */
+/* line 180, ../sass/styles.scss */
 #events ul.toggle-date-range li.active {
   background-color: #e3dbd1;
   border-bottom: 2px solid #C1976D;
 }
-/* line 167, ../sass/styles.scss */
+/* line 185, ../sass/styles.scss */
 #events ul.toggle-date-range a {
   color: #4d4d4d;
   font: 12px 'Lato', sans-serif;
   text-decoration: none;
 }
-/* line 175, ../sass/styles.scss */
+/* line 193, ../sass/styles.scss */
 #events table {
   margin-left: 40px;
   border-spacing: 10px;
@@ -11668,144 +11743,162 @@ button.close {
   font: 14px 'LatoLight', sans-serif;
   margin-bottom: 50px;
 }
-/* line 182, ../sass/styles.scss */
+/* line 200, ../sass/styles.scss */
 #events table tr:first-child {
   font: 14px 'LatoBold', sans-serif;
 }
-/* line 185, ../sass/styles.scss */
+/* line 203, ../sass/styles.scss */
 #events table tr:first-child td {
   border-top: none;
 }
-/* line 190, ../sass/styles.scss */
+/* line 208, ../sass/styles.scss */
 #events table td {
   border-top: 1px solid #808080;
   padding: 10px;
 }
-/* line 195, ../sass/styles.scss */
+/* line 213, ../sass/styles.scss */
 #events table a {
   text-decoration: none;
   color: #000000;
 }
-/* line 201, ../sass/styles.scss */
+/* line 219, ../sass/styles.scss */
 #events .show-all {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato, sans-serif;
   margin-right: 35px;
 }
 
-/* line 209, ../sass/styles.scss */
+/* line 227, ../sass/styles.scss */
 #birthdays {
   min-height: 215px;
   margin: 5px;
   background-color: #4eb2de;
 }
-/* line 217, ../sass/styles.scss */
+/* line 235, ../sass/styles.scss */
 #birthdays h3 {
   padding-left: 25px;
   color: #ffffff;
   font: 18px 'Lato', sans-serif;
 }
-/* line 224, ../sass/styles.scss */
+/* line 242, ../sass/styles.scss */
 #birthdays .owl-carousel img {
   height: 100px;
 }
-/* line 229, ../sass/styles.scss */
+/* line 247, ../sass/styles.scss */
 #birthdays .caption-name {
   color: #4d4d4d;
   font: 12px 'Lato', sans-serif;
   line-height: 1px;
   margin-top: 10px;
 }
-/* line 236, ../sass/styles.scss */
+/* line 254, ../sass/styles.scss */
 #birthdays .caption-position {
   color: #4d4d4d;
   font: 12px 'LatoLight', sans-serif;
   font-style: italic;
 }
 
-/* line 244, ../sass/styles.scss */
+/* line 262, ../sass/styles.scss */
 #notifications {
   min-height: 215px;
   margin: 5px;
   padding-left: 30px;
   background-color: #e7434a;
 }
-/* line 253, ../sass/styles.scss */
+/* line 271, ../sass/styles.scss */
 #notifications h3 {
   color: #ffffff;
-  font: 400 18px Lato;
+  font: 18px 'Lato', sans-serif;
 }
-/* line 257, ../sass/styles.scss */
+/* line 275, ../sass/styles.scss */
 #notifications p {
   color: rgba(255, 255, 255, 0.5);
-  font: 400 14px Lato;
+  font: 14px 'Lato', sans-serif;
 }
-/* line 261, ../sass/styles.scss */
+/* line 279, ../sass/styles.scss */
 #notifications table {
   border-spacing: 10px;
   border-collapse: separate;
   color: #ededed;
-  font: 300 12px Lato;
+  font: 12px 'Lato', sans-serif;
+  width: 90%;
 }
-/* line 266, ../sass/styles.scss */
+/* line 285, ../sass/styles.scss */
 #notifications table a {
   text-decoration: none;
   color: #ededed;
 }
-/* line 271, ../sass/styles.scss */
+/* line 291, ../sass/styles.scss */
+#notifications table tr td {
+  line-height: 2em;
+  border-bottom: 1px solid #ffffff;
+}
+/* line 295, ../sass/styles.scss */
+#notifications table tr td:first-child {
+  border-bottom: none;
+}
+/* line 301, ../sass/styles.scss */
+#notifications table tr:last-child td {
+  border-bottom: none;
+}
+/* line 307, ../sass/styles.scss */
 #notifications .show-all {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato;
   margin-right: 30px;
 }
 
-/* line 278, ../sass/styles.scss */
+/* line 314, ../sass/styles.scss */
 #news {
   background-color: #2db0a7;
   min-height: 162px;
   margin: 5px;
   padding-left: 30px;
 }
-/* line 283, ../sass/styles.scss */
+/* line 320, ../sass/styles.scss */
 #news h3 {
   color: #ffffff;
   font: 400 18px Lato;
 }
-/* line 287, ../sass/styles.scss */
+/* line 324, ../sass/styles.scss */
 #news p:first-child {
   color: rgba(237, 237, 237, 0.7);
   font: 500 10px Lato;
 }
-/* line 291, ../sass/styles.scss */
+/* line 328, ../sass/styles.scss */
 #news p {
   color: #ffffff;
   font: 300 14px Lato;
 }
-/* line 296, ../sass/styles.scss */
+/* line 332, ../sass/styles.scss */
+#news .more {
+  border-bottom: 1px solid #ededed;
+}
+/* line 334, ../sass/styles.scss */
 #news .more a {
   color: #ededed;
   font: 500 12px Lato;
   margin-right: 30px;
 }
-/* line 303, ../sass/styles.scss */
+/* line 341, ../sass/styles.scss */
 #news .all-news a {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato;
   margin-right: 30px;
 }
 
-/* line 311, ../sass/styles.scss */
+/* line 349, ../sass/styles.scss */
 .ph {
   max-height: 120px;
   margin: 5px;
 }
-/* line 314, ../sass/styles.scss */
+/* line 352, ../sass/styles.scss */
 .ph img {
   height: 120px;
   width: 130px;
   position: relative;
 }
-/* line 319, ../sass/styles.scss */
+/* line 357, ../sass/styles.scss */
 .ph p {
   position: absolute;
   bottom: 0;
@@ -11814,26 +11907,85 @@ button.close {
   margin-left: 10px;
 }
 
-/* line 329, ../sass/styles.scss */
+/* line 367, ../sass/styles.scss */
 .otsu {
   background-color: #ea754a;
   min-height: 100px;
   margin: 5px;
   padding-left: 30px;
 }
-/* line 334, ../sass/styles.scss */
+/* line 372, ../sass/styles.scss */
 .otsu h3 {
   color: #ffffff;
   font: 400 18px Lato;
 }
-/* line 338, ../sass/styles.scss */
+/* line 376, ../sass/styles.scss */
 .otsu p {
   color: #ededed;
   font: 700 12px Lato;
 }
-/* line 342, ../sass/styles.scss */
+/* line 380, ../sass/styles.scss */
 .otsu a {
   color: rgba(255, 255, 255, 0.5);
   font: 400 11px Lato;
   margin-right: 30px;
+}
+
+/* line 387, ../sass/styles.scss */
+.carousel {
+  border-top: 1px solid #c7c7c7;
+}
+
+/* line 390, ../sass/styles.scss */
+.caret-left {
+  position: relative;
+}
+
+/* line 394, ../sass/styles.scss */
+.caret-left:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-right: 25px solid #666666;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+}
+
+/* line 404, ../sass/styles.scss */
+.caret-left:after {
+  content: '';
+  position: absolute;
+  left: 1px;
+  top: 1px;
+  border-right: 24px solid #eeeeee;
+  border-top: 24px solid transparent;
+  border-bottom: 24px solid transparent;
+}
+
+/* line 413, ../sass/styles.scss */
+.caret-right {
+  position: relative;
+}
+
+/* line 417, ../sass/styles.scss */
+.caret-right:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-left: 25px solid #666666;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+}
+
+/* line 427, ../sass/styles.scss */
+.caret-right:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 1px;
+  border-left: 24px solid #eeeeee;
+  border-top: 24px solid transparent;
+  border-bottom: 24px solid transparent;
 }
