Simple line icons

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,6 +12,9 @@
 // Import Font Awesome
 @import "font-awesome/font-awesome";
 
+// Import Simple line icons
+@import "simple-line-icons";
+
 // Import Lato font
 @import "lato";
 
