--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -26,6 +26,10 @@
 
 $main_font_color: #ffffff;
 
+body {
+  background-color: #e1e1e1;
+}
+
 .content {
   margin-left: 35px;
 }
@@ -112,6 +116,7 @@ $main_font_color: #ffffff;
   margin-left: 0;
   padding-left: 25px;
   padding-bottom: 50px;
+  height: 325px;
 
   a {
     text-decoration: none;
@@ -168,6 +173,7 @@ $main_font_color: #ffffff;
   margin-left: 0;
   padding-left: 25px;
   background-color: $background_color;
+  height: 302px;
 
   h3 {
     color: #4d4d4d;
@@ -202,7 +208,7 @@ $main_font_color: #ffffff;
     border-spacing: 10px;
     width: 80%;
     font: 14px 'LatoLight', sans-serif;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 
     tr:first-child {
       font: 14px 'LatoBold', sans-serif;
@@ -235,7 +241,7 @@ $main_font_color: #ffffff;
 
   $background_color: #4eb2de;
 
-  min-height: 215px;
+  height: 215px;
   margin: 5px;
   background-color: $background_color;
 
@@ -270,7 +276,7 @@ $main_font_color: #ffffff;
 
   $background_color: #e7434a;
 
-  min-height: 215px;
+  height: 215px;
   margin: 5px;
   padding-left: 30px;
   background-color: $background_color;
@@ -320,7 +326,7 @@ $main_font_color: #ffffff;
 
 #news {
   background-color: #2db0a7;
-  min-height: 162px;
+  height: 162px;
   margin: 5px;
   padding-left: 30px;
 
@@ -375,7 +381,7 @@ $main_font_color: #ffffff;
 }
 
 .ph {
-  max-height: 120px;
+  height: 120px;
   margin: 5px;
   img {
     height: 120px;
@@ -394,7 +400,7 @@ $main_font_color: #ffffff;
 
 .otsu {
   background-color: #ea754a;
-  min-height: 100px;
+  height: 110px;
   margin: 5px;
   padding-left: 30px;
   h3 {
@@ -404,6 +410,7 @@ $main_font_color: #ffffff;
   p {
     color: #ededed;
     font: 700 12px Lato;
+    line-height: 3px;
   }
   a {
     color: rgba(255, 255, 255, 0.5);
