--- a/sass/_chat.scss
+++ b/sass/_chat.scss
@@ -66,12 +66,13 @@
   }
 
   .sub-bar {
-    border-bottom: 1px solid #808080;
+    border-bottom: 1px solid #d2d2d2;
     height: 35px;
     background-color: #ededed;
     a {
       margin-top: 8px;
       display: block;
+      color: #808080;
     }
     p:first-child {
       color: #666666;
@@ -88,6 +89,9 @@
   }
   .panel-footer {
     background-color: #ededed;
+    a {
+      color: #808080;
+    }
     input {
       border: 0px;
       color: #949494;
