--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -428,55 +428,12 @@ body {
   border-top: 1px solid #c7c7c7;
   padding-top: 10px;
 }
-.caret-left {
-  position: relative;
-  margin-top: 30px;
+.carousel-container {
+  owl-carousel {
+    width: 70%;
+  }
 }
 
-.caret-left:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-right: 25px solid #666666;
-  border-top: 25px solid transparent;
-  border-bottom: 25px solid transparent;
-
-}
-
-.caret-left:after {
-  content: '';
-  position: absolute;
-  left: 1px;
-  top: 1px;
-  border-right: 24px solid #e1e1e1;
-  border-top: 24px solid transparent;
-  border-bottom: 24px solid transparent;
-}
-.caret-right {
-  position: relative;
-  margin-top: 30px;
-}
-
-.caret-right:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-left: 25px solid #666666;
-  border-top: 25px solid transparent;
-  border-bottom: 25px solid transparent;
-}
-
-.caret-right:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 1px;
-  border-left: 24px solid #e1e1e1;
-  border-top: 24px solid transparent;
-  border-bottom: 24px solid transparent;
-}
 .owl-theme .owl-controls .owl-buttons div {
   position: absolute;
 }
