--- a/sass/_chat.scss
+++ b/sass/_chat.scss
@@ -1,13 +1,21 @@
 .chat-container {
-  height: 100%;
-  position: absolute;
+  height: 100vh;
+  position: fixed;
   right: 0;
   top: 0;
   z-index: 1000;
 
+//  .chat-window {
+//    height: 100vh;
+//  }
+
+  .col-md-12 {
+    height: 100vh;
+  }
+
   .panel {
     width: 191px;
-    height: 100%;
+    height: 100vh;
     border: none;
     margin-bottom: 0;
   }
