--- a/sass/_bootstrap-variables.scss
+++ b/sass/_bootstrap-variables.scss
@@ -357,9 +357,9 @@ $navbar-default-border:            0px;
 
 // Navbar links
 // $navbar-default-link-color:                #777
-// $navbar-default-link-hover-color:          #333
+$navbar-default-link-hover-color:          #fff;
 // $navbar-default-link-hover-bg:             transparent
-// $navbar-default-link-active-color:         #555
+$navbar-default-link-active-color:         #fff;
 // $navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%)
 // $navbar-default-link-disabled-color:       #ccc
 // $navbar-default-link-disabled-bg:          transparent
