--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -274,6 +274,14 @@ body {
     color: #4d4d4d;
     font: 12px 'LatoLight', sans-serif;
     font-style: italic;
+    margin-bottom: 0;
+  }
+  .all-birthdays {
+    a {
+      color: #a7d9ef;
+      font: 400 11px Lato;
+      margin-right: 50px;
+    }
   }
 
 }
