--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -355,13 +355,12 @@ body {
     margin-top: 10px;
 
     .icon0, .icon1, .icon2, .icon3, .icon4 {
-      background: url('../images/icons.png') no-repeat;
+      background: url('../images/icons.png') no-repeat 0 0;
     }
 
     .icon0 {
-      left: 0;
-      width: 16px;
-      background-position: -16px 0px;
+      width: 83px;
+      height: 16px;
     }
 
     li {
@@ -464,83 +463,79 @@ body {
 }
 
 .owl-theme .owl-controls{
-	margin-top: 10px;
-	text-align: center;
+  margin-top: 10px;
+  text-align: center;
 }
 
 
 .owl-theme .owl-controls .owl-buttons div{
-	color: #FFF;
-	display: inline-block;
-	zoom: 1;
-	*display: inline;/*IE7 life-saver */
-	margin: 5px;
-	padding: 3px 10px;
-	font-size: 12px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-	background: #869791;
-	filter: Alpha(Opacity=50);/*IE7 fix*/
-	opacity: 0.5;
+  color: #FFF;
+  display: inline-block;
+  zoom: 1;
+  *display: inline;/*IE7 life-saver */
+  margin: 5px;
+  padding: 3px 10px;
+  font-size: 12px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background: #869791;
+  filter: Alpha(Opacity=50);/*IE7 fix*/
+  opacity: 0.5;
 }
 /* Clickable class fix problem with hover on touch devices */
 /* Use it for non-touch hover action */
 .owl-theme .owl-controls.clickable .owl-buttons div:hover{
-	filter: Alpha(Opacity=100);/*IE7 fix*/
-	opacity: 1;
-	text-decoration: none;
+  filter: Alpha(Opacity=100);/*IE7 fix*/
+  opacity: 1;
+  text-decoration: none;
 }
 
 
 .owl-theme .owl-controls .owl-page{
-	display: inline-block;
-	zoom: 1;
-	*display: inline;/*IE7 life-saver */
+  display: inline-block;
+  zoom: 1;
+  *display: inline;/*IE7 life-saver */
 }
 .owl-theme .owl-controls .owl-page span{
-	display: block;
-	width: 12px;
-	height: 12px;
-	margin: 5px 7px;
-	filter: Alpha(Opacity=50);/*IE7 fix*/
-	opacity: 0.5;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	border-radius: 20px;
-	background: #869791;
+  display: block;
+  width: 12px;
+  height: 12px;
+  margin: 5px 7px;
+  filter: Alpha(Opacity=50);/*IE7 fix*/
+  opacity: 0.5;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  background: #869791;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span{
-	filter: Alpha(Opacity=100);/*IE7 fix*/
-	opacity: 1;
+  filter: Alpha(Opacity=100);/*IE7 fix*/
+  opacity: 1;
 }
 
 .owl-theme .owl-controls .owl-page span.owl-numbers{
-	height: auto;
-	width: auto;
-	color: #FFF;
-	padding: 2px 10px;
-	font-size: 12px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
+  height: auto;
+  width: auto;
+  color: #FFF;
+  padding: 2px 10px;
+  font-size: 12px;
+//  border-radius: 30px;
 }
 
 .owl-item.loading{
-	min-height: 150px;
-	background: url(AjaxLoader.gif) no-repeat center center
+  min-height: 150px;
+  background: url(AjaxLoader.gif) no-repeat center center
 }
 
 #owl-demo .owl-item > div img {
-    display: block;
-    width: 100%;
-    height: auto;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    margin-bottom:4px;
+  display: block;
+  width: 100%;
+  height: auto;
+//  border-radius: 3px;
+  margin-bottom:4px;
 }
 
 #owl-demo .owl-item > div{
@@ -563,11 +558,11 @@ body {
 }
 
 .owl-theme .owl-controls .owl-buttons .owl-prev{
-  left: -45px;
+  left: -35px;
   top: 55px;
 }
 
 .owl-theme .owl-controls .owl-buttons .owl-next{
-  right: -45px;
+  right: -35px;
   top: 55px;
 }
