--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -237,7 +237,7 @@ body {
   }
 
   .show-all {
-    color: rgba(255, 255, 255, 0.5);
+    color: #e4dbd1;
     font: 400 11px Lato, sans-serif;
     margin-right: 35px;
   }
@@ -300,7 +300,7 @@ body {
     font: 18px 'Lato', sans-serif;
   }
   p {
-    color: rgba(255, 255, 255, 0.5);
+    color: #cce4f0;
     font: 14px 'Lato', sans-serif;
   }
   table {
@@ -332,7 +332,7 @@ body {
   }
 
   .show-all {
-    color: rgba(255, 255, 255, 0.5);
+    color: #f3a1a5;
     font: 400 11px Lato;
     margin-right: 30px;
   }
@@ -372,7 +372,7 @@ body {
   .article {
 
     p:first-child {
-      color: rgba(237, 237, 237, 0.7);
+      color: #ededed;
       font: 500 10px Lato;
     }
 
@@ -397,7 +397,7 @@ body {
 
   .all-news {
     a {
-      color: rgba(255, 255, 255, 0.5);
+      color: #96d8d3;
       font: 400 11px Lato;
       margin-right: 30px;
     }
@@ -444,7 +444,7 @@ body {
   }
 
   a {
-    color: rgba(255, 255, 255, 0.5);
+    color: #f5baa5;
     font: 400 11px 'Lato', sans-serif;
     margin-right: 30px;
   }
