Carousel items and centering

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -441,6 +441,10 @@ body {
   .carousel {
     border-top: 1px solid #c7c7c7;
     padding-top: 10px;
+
+    .cycle-slideshow {
+      margin: 0 auto;
+    }
   }
 }
 
