--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -268,6 +268,7 @@ body {
   }
 
   .prev, .next {
+    color: #ffffff;
   }
 
   .caption-name {
@@ -436,7 +437,7 @@ body {
 #footer-carousel {
 
   .prev, .next {
-
+    color: #666666;
   }
 
   .prev {
